# qVis

./: .gitignore  CMakeLists.txt  README.md  build.sh  demo.q  exampleAnimation.q  exampleBounce.q  exampleRipple.q  exampleText.q  inspect.q  qOS.q  qSDL.cpp  qVis.q
apps/: exampleAnimation.q  exampleBoids.q  exampleBounce.q  exampleDashboard.q  exampleDashboardRaw.q  exampleDoom.q  exampleFinance.q  exampleFluid.q  exampleLife.q  exampleMandelbrot.q  exampleNBody.q  examplePhysarum.q  exampleRay.q  exampleRipple.q  exampleSand.q  exampleText.q  football.q  fps.q  minimalExample.q
cpp/: CMakeLists.txt  qSDL.cpp
examples/: exampleAnimation.q  exampleBoids.q  exampleBounce.q  exampleDashboard.q  exampleDashboardRaw.q  exampleDoom.q  exampleFinance.q  exampleFluid.q  exampleLife.q  exampleMandelbrot.q  exampleNBody.q  examplePhysarum.q  exampleRay.q  exampleRipple.q  exampleSand.q  exampleText.q  minimalExample.q
game/: football.q  fps.q
native/: build.sh  qSDL.cpp
tests/: smoke.q  smoke_qos.q
